# Embedded-Snake-Console

./: Cargo.toml  analog_stick.rs  flash  ledMatrixSnake.ino
.cargo/: config.toml
src/: analog_stick.rs  common.rs  concurrency.rs  controller.rs  game_engine.rs  internal_representation.rs  main.rs  map_menu.rs  matrix_view.rs  mvc.rs  shift_register.rs  time_util.rs  traits.rs  user_interface.rs
src/internal_representation/: controller_input.rs  direction.rs  game_board.rs  game_state.rs  map.rs  mod.rs  pin_state.rs  point.rs  snake.rs
src/libs/: mod.rs  shift_register.rs  time_util.rs
