[package]
name = "snake_console"
version = "0.1.0"
authors = ["Szymon Kubica <szymo.kubica@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.3.4"
arrayvec = { version = "0.7.2", default-features = false, features = [] }
oorandom = "11.1.3"

[[bin]]
name = "snake_console"
test = false
bench = false


[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
#strip = true
debug = false
lto = true
opt-level = "z"
